feat: add delete icon and enable delete item when clicking on this icon

--- a/sources/styles/app.css
+++ b/sources/styles/app.css
@@ -24,3 +24,8 @@
 .section-font-size > .webix_template {
     font-size: 14px;
 }
+.item-justify{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
